...
            Expanded(
              child: SizedBox(
                height: 52,
                child: OutlinedButton(
                  key: const Key('clearButton'),
                  onPressed: (saving || printing) ? null : onClear,
                  child: const Text('Clear', style: TextStyle(fontSize: 16)),
                ),
              ),
            ),
          ],
        ),
      ],
...
